Updated cursor (drag and drop not currently implemented)

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <!-- TODO: see https://github.com/NorthwoodsSoftware/GoJS/blob/master/samples/htmlDragDrop.html -->
         <span style="display: inline-block; vertical-align: top">
           <div class="palettezone">
-            <div class="draggable" draggable="true">Model</div>
-            <div class="draggable" draggable="true">Operation</div>
-            <div class="draggable" draggable="true">Loop</div>
+            <div class="draggable" draggable="true">Alpha</div>
+            <div class="draggable" draggable="true">Beta</div>
+            <div class="draggable" draggable="true">Gamma</div>
+            <div class="draggable" draggable="true">Delta</div>
           </div>
         </span>
       </div>
