Wire the 'Simulate' button up to our cisrun endpoint

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/angular/angular.js"></script>
-    <script src="node_modules/angular-drag-drop/dist/angular-drag-drop.min.js"></script>
     <script src="node_modules/angular-slider/slider.js"></script>
     
     <!-- Now load our source -->
     <link rel="stylesheet" href="asset/cis.css">
+    <script src="app/cis-api.js"></script>
     <script src="app/cis.controller.js"></script>
     <script src="app/editor.directive.js"></script>
     
