Added model details modal

--- a/app/main/modals/export.template.html
+++ b/app/main/modals/export.template.html
@@ -8,7 +8,7 @@
   <div class="modal-body">
     <div class="row">
       <div class="col-sm-12">
-        <pre style="height:350px;">{{ results }}</pre>
+        <pre style="height:350px;">{{ formatted }}</pre>
       </div>
     </div>
   </div>
