Adjusted placeholder data in output YAML (args,driver,etc)

--- a/app/main/main.template.html
+++ b/app/main/main.template.html
@@ -2,7 +2,7 @@
   <div class="row">
     <!-- Component Palette -->
     <div class="col-sm-2">
-      <h4>Models</h4>
+      <h4>Library</h4>
       
       <table class="table table-condensed table-hover">
         <tr>
@@ -14,7 +14,7 @@
           <td>{{ model.description }} ({{ model.label || model.name }})</td>
           <td style="text-align:center;">
             <button class="btn btn-xs btn-info" style="margin:0;" ng-click="showResults({ results: model, title: 'View Raw Model', isJson: true })">
-              <i class="fa fa-fw fa-question-circle-o"></i> 
+              <i class="fa fa-fw fa-code"></i> 
             </button>
           </td>
           <td style="text-align:center;">
