Added Type/Value fields when editing InPorts and OutPorts

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <!-- Now load our app source -->
     <link rel="stylesheet" href="asset/cis.css">
-    <script src="app/cis-api.module.js"></script>
+    <script src="app/cis-api.js"></script>
     <script src="app/cis.module.js"></script>
     <script src="app/editor.directive.js"></script>
     <script src="app/main/main.controller.js"></script>
