Sync this repo back up with the static version UI

--- a/app/main/modals/exportJson/exportJson.template.html
+++ b/app/main/modals/exportJson/exportJson.template.html
@@ -1,8 +1,11 @@
 <!-- The "Export" Modal -->
-<section id="exportModal">
+<section id="exportJsonModal">
   <div class="modal-header">
-    <button id="closeBtn" type="button" class="btn btn-xs btn-default pull-right" data-dismiss="modal" aria-label="Close" ng-click="close()"><i class="fa fa-fw fa-times"></i></button>
-    <h4 class="modal-title">{{ title }}</h4>
+    <button id="closeBtn" type="button" class="btn btn-xs btn-default pull-right" 
+        data-dismiss="modal" aria-label="Close" ng-click="close()">
+      <i class="fa fa-fw fa-times"></i>
+    </button>
+    <h4 class="modal-title pull-left">{{ title }}</h4>
   </div>
   
   <div class="modal-body">
