Sync changes to dev branch

--- a/app/swagger/swagger.template.html
+++ b/app/swagger/swagger.template.html
@@ -1,5 +1,5 @@
 <!-- The "API Reference" View -->
-<section>
+<section style="overflow-y:visible">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
