--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="node_modules/font-awesome-animation/dist/font-awesome-animation.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/angular-swagger-ui/dist/css/swagger-ui.min.css"> 
     <link rel="stylesheet" type="text/css" href="node_modules/angular-slider/slider.css" />
-    <link rel="stylesheet" type="text/css" href="../node_modules/the-graph/themes/the-graph-dark.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/the-graph/themes/the-graph-dark.css">
     <!--<link rel="stylesheet" type="text/css" href="node_modules/the-graph/themes/the-graph-light.css">-->
   </head>
   
@@ -55,7 +55,7 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-fw fa-question-circle-o"></i> Help</a>
               <ul class="dropdown-menu">
-                <!--<li><a href="#/swagger">API Reference</a></li>-->
+                <li><a href="#/swagger">API Reference</a></li>
                 <li><a target="_blank" href="https://github.com/cropsinsilico/cropsinsilico.github.io/blob/master/USER-GUIDE.md">User's Guide</a></li>
                 <li><a target="_blank" href="https://github.com/cropsinsilico/cropsinsilico.github.io/blob/master/DEVELOPER-GUIDE.md">Developer's Guide</a></li>
                 <li><a target="_blank" href="https://cropsinsilico.github.io/cis_interface/">CLI Documentation</a></li>
