--- a/app/main/main.template.html
+++ b/app/main/main.template.html
@@ -19,17 +19,17 @@
         <th width="10%" style="text-align:center;" ng-if="DEBUG">Info</th>
         <th width="10%" style="text-align:center;">Add</th>
       </tr>
-      <tr ng-repeat="spec in getModelOptions(library) track by spec.name">
-        <th style="text-align:center;" ><i class="fa fa-fw fa-{{ spec.content.icon }}"></i></th>
-        <td>{{ spec.content.description }} ({{ spec.content.label || spec.name }})</td>
+      <tr ng-repeat="(name, spec) in getModelOptions(library) track by name">
+        <th style="text-align:center;" ><i class="fa fa-fw fa-{{ spec.icon }}"></i></th>
+        <td>{{ spec.description }} ({{ spec.label || spec.name }})</td>
         <td style="text-align:center;" ng-if="DEBUG">
           <button class="btn btn-xs btn-default" style="margin:0;" ng-click="showResults({ results: spec, title: 'View Raw Model', isJson: true })">
             <i class="fa fa-fw fa-code"></i> 
           </button>
         </td>
         <td style="text-align:center;">
-          <button class="btn btn-xs btn-primary" style="margin:0;" ng-disabled="selectedItem || graphHasModel(spec.name)" tooltip-placement="left" ng-click="addNodeInstance(spec.content)"
-              tooltip-append-to-body="true" uib-tooltip="{{ graphHasModel(spec.name) ? spec.content.label + ' has been added' : 'Add ' + spec.content.description + ' to the canvas' }}">
+          <button class="btn btn-xs btn-primary" style="margin:0;" ng-disabled="selectedItem || graphHasModel(spec.name)" tooltip-placement="left" ng-click="addNodeInstance(spec)"
+              tooltip-append-to-body="true" uib-tooltip="{{ graphHasModel(spec.name) ? spec.label + ' has been added' : 'Add ' + spec.description + ' to the canvas' }}">
             <i class="fa fa-fw fa-plus"></i> 
           </button>
         </td>
@@ -47,9 +47,9 @@
         <th width="10%" style="text-align:center;" ng-if="DEBUG">Info</th>
         <th width="10%" style="text-align:center;">Add</th>
       </tr>
-      <tr ng-repeat="spec in getDataOptions(library) track by spec.name">
-        <th style="text-align:center;" ><i class="fa fa-fw fa-{{ spec.content.icon }}"></i></th>
-        <td>{{ spec.content.description }} ({{ spec.content.label || spec.name }})</td>
+      <tr ng-repeat="(name, spec) in getDataOptions(library) track by name">
+        <th style="text-align:center;" ><i class="fa fa-fw fa-{{ spec.icon }}"></i></th>
+        <td>{{ spec.description }} ({{ spec.label || spec.name }})</td>
         <td style="text-align:center;" ng-if="DEBUG">
           <button class="btn btn-xs btn-default" style="margin:0;" ng-click="showResults({ results: spec, title: 'View Raw Model', isJson: true })">
             <i class="fa fa-fw fa-code"></i> 
@@ -57,7 +57,7 @@
         </td>
         <td style="text-align:center;">
           <button class="btn btn-xs btn-primary" style="margin:0;" ng-disabled="selectedItem" tooltip-placement="left" ng-click=" spec.name === 'inport' ? addInport() : addOutport()"
-              tooltip-append-to-body="true" uib-tooltip="Add a {{ spec.content.label }} to the canvas">
+              tooltip-append-to-body="true" uib-tooltip="Add a {{ spec.label }} to the canvas">
             <i class="fa fa-fw fa-plus"></i> 
           </button>
         </td>
@@ -88,7 +88,7 @@
     
     <!-- Outputs -->
     <div class="pull-right">
-      <button type="button" ng-if="false" class="btn btn-xs btn-default" ng-click="exportGraph()" tooltip-placement="left" uib-tooltip="View Raw JSON of the current graph">
+      <button type="button" ng-if="DEBUG" class="btn btn-xs btn-default" ng-click="exportGraph()" tooltip-placement="left" uib-tooltip="View Raw JSON of the current graph">
         <i class="fa fa-fw fa-code"></i> View Raw
       </button>
       
