--- a/app/main/main.template.html
+++ b/app/main/main.template.html
@@ -47,7 +47,7 @@
         <th width="10%" style="text-align:center;" ng-if="DEBUG">Info</th>
         <th width="10%" style="text-align:center;">Add</th>
       </tr>
-      <tr ng-repeat="(name, spec) in getDataOptions(library) track by name">
+      <tr ng-repeat="(name, spec) in [inport, outport] track by name">
         <th style="text-align:center;" ><i class="fa fa-fw fa-{{ spec.icon }}"></i></th>
         <td>{{ spec.description }} ({{ spec.label || spec.name }})</td>
         <td style="text-align:center;" ng-if="DEBUG">
