Save/load graph functionality, delete personal spec/graph buttons

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <i class="fa fa-fw fa-question-circle-o"></i> <i class="fa fa-fw fa-caret-down"></i>
               </a>
               <ul class="dropdown-menu">
-                <li><a href="#/swagger">API Reference</a></li>
+                <li><a href="/api/v1">API Reference</a></li>
                 <li><a target="_blank" href="https://github.com/cropsinsilico/cropsinsilico.github.io/blob/master/USER-GUIDE.md">User's Guide</a></li>
                 <li><a target="_blank" href="https://github.com/cropsinsilico/cropsinsilico.github.io/blob/master/DEVELOPER-GUIDE.md">Developer's Guide</a></li>
                 <li><a target="_blank" href="https://cropsinsilico.github.io/cis_interface/">CLI Documentation</a></li>
