--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="LoginCtrl">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <!--<li><a href="https://goo.gl/forms/AcEhlzvNFsaVAg3H3" target="_blank">Submit a New Model</a></li>-->
             <li ng-if="user.email">
-              <a href="#/" ng-controller="MainCtrl" ng-click="submitNewModel()">Submit a New Model</a>
+              <a href="#/" ng-click="submitNewModel()">Submit a New Model</a>
             </li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right" ng-controller="LoginCtrl">
             <li ng-if="!user.email"><a href="#/" ng-click="signInWithGithub()">Log In</a></li>
             <li class="dropdown" ng-if="user.email">
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
