Remove "UI" from window title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="cis">
   <head>
-    <title>Crops in Silico UI</title>
+    <title>Crops in Silico</title>
     <base href="/">
     <link rel=icon href="asset/favicon.ico">
     
