--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <script src="node_modules/angular-resource/angular-resource.min.js"></script>
     <script src="node_modules/angular-messages/angular-messages.min.js"></script>
     <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+    <script src="node_modules/angular-cache-buster/angular-cache-buster.js"></script>
     
     <!-- AngularJS + Swagger UI -->
     <script src="node_modules/js-yaml/dist/js-yaml.min.js"></script>
