Added 'Submit to GitHub' button to Model Palette

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <ul class="nav navbar-nav">
             <!--<li><a href="https://goo.gl/forms/AcEhlzvNFsaVAg3H3" target="_blank">Submit a New Model</a></li>-->
             <li ng-if="user.email">
-              <a href="#/" ng-click="submitNewModel()">Create a New Model</a>
+              <a href="#/" ng-click="createNewModel()">Create a New Model</a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right" ng-controller="LoginCtrl">
