--- a/app/main/main.template.html
+++ b/app/main/main.template.html
@@ -22,13 +22,17 @@
         <th style="text-align:center;" ><i class="fa fa-fw fa-{{ spec.icon }}"></i></th>
         <td>{{ spec.description }} ({{ spec.label || spec.name }})</td>
         <td style="text-align:right;">
+          <button class="btn btn-xs btn-default" style="margin:0;" ng-if="DEBUG" ng-click="showResults({ results: spec, title: 'View Raw Model', isJson: true })"
+            tooltip-append-to-body="true" uib-tooltip="View the raw JSON for this Spec">
+            <i class="fa fa-fw fa-code"></i> 
+          </button>
           <button class="btn btn-xs btn-default" style="margin:0;" ng-if="DEBUG" ng-click="submitSpecToGitHub(spec)" ng-if="user && user._id && spec.creatorId === user._id"
               tooltip-append-to-body="true" uib-tooltip="Submit this model to the official catalog, pending review">
             <i class="fa fa-fw fa-github"></i> 
           </button>
-          <button class="btn btn-xs btn-default" style="margin:0;" ng-if="DEBUG" ng-click="showResults({ results: spec, title: 'View Raw Model', isJson: true })"
-            tooltip-append-to-body="true" uib-tooltip="View the raw JSON for this Spec">
-            <i class="fa fa-fw fa-code"></i> 
+          <button class="btn btn-xs btn-info" style="margin:0;" ng-click="editSpec(spec)" ng-if="user && user._id && spec.creatorId === user._id" 
+              tooltip-append-to-body="true" uib-tooltip="Edit the fields of this spec in your personal catalog.">
+            <i class="fa fa-fw fa-edit"></i> 
           </button>
           <button class="btn btn-xs btn-danger" style="margin:0;" ng-click="deleteSpec(spec)" ng-if="user && user._id && spec.creatorId === user._id" 
               tooltip-append-to-body="true" uib-tooltip="Delete this spec from your personal catalog. You will be prompted before deletion">
