Draw more attention to the ModelPalette's toggle button

--- a/app/main/main.template.html
+++ b/app/main/main.template.html
@@ -6,7 +6,7 @@
   <div id="modelPalette">
     <div class="paletteHeader">
       <h4 class="pull-left libraryHeader">Model Library</h4>
-      <button class="btn btn-xs pull-right" ng-class="{ 'btn-info': !showPalette, 'btn-default': showPalette }" ng-click="showPalette = !showPalette">
+      <button class="btn btn-xs btn-primary pull-right" ng-click="showPalette = !showPalette">
         <i class="fa fa-fw fa-toggle-up" ng-if="showPalette"></i>
         <i class="fa fa-fw fa-search" ng-if="!showPalette"></i>
       </button>
