--- a/app/login/login.template.html
+++ b/app/login/login.template.html
@@ -6,12 +6,12 @@
         <button class="btn btn-primary" ng-click="signInWithGithub()">
           <i class="fa fa-fw fa-2x fa-github"></i> <span style="font-size:20px;">Sign In with GitHub</span>
         </button>
-        <button class="btn btn-default" ng-click="signInWithGirder()">
+        <!--<button class="btn btn-default" ng-click="signInWithGirder()">
           <i class="fa fa-fw fa-2x fa-user"></i> <span style="font-size:20px;">Sign In with Girder</span>
         </button>
         <button class="btn btn-default" ng-click="signUpWithGirder()">
           <i class="fa fa-fw fa-2x fa-user-plus"></i> <span style="font-size:20px;">Register with Girder</span>
-        </button>
+        </button>-->
       </div>
     </div>
   </div>
