--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <script src="node_modules/ngreact/ngReact.js?f4784b043293b42b"></script>
     <script src="node_modules/the-graph/dist/vendor.js?5077d5b4cd0a66cc"></script>
     <script src="node_modules/the-graph/dist/the-graph.js?eb726d66942446b7"></script>
-
+    
     <!-- Now load our app source -->
     <link rel="stylesheet" href="asset/cis.css?832341df815020d7">
     <script src="app/cis.module.js?308d02dcc8fd17c3"></script>
@@ -128,6 +128,7 @@
     <script src="app/main/modals/addSpec/addSpec.controller.js?2f8a3b3311951e5c"></script>
     <script src="app/main/modals/exportJson/exportJson.controller.js?db2640d17d791781"></script>
     <script src="app/main/modals/generateYaml/generateYaml.controller.js?6224cdbe4e44041b"></script>
+    <script src="app/main/modals/logViewer/logViewer.controller.js"></script>
     <script src="app/main/modals/editSelection/editSelection.controller.js?ef5e4b2cc9292229"></script>
   </body>
 </html>
