--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <script src="app/main/modals/addSpec/addSpec.controller.js?2f8a3b3311951e5c"></script>
     <script src="app/main/modals/exportJson/exportJson.controller.js?db2640d17d791781"></script>
     <script src="app/main/modals/generateYaml/generateYaml.controller.js?6224cdbe4e44041b"></script>
-    <script src="app/main/modals/logViewer/logViewer.controller.js"></script>
+    <script src="app/main/modals/logViewer/logViewer.controller.js?3dad27c9f81b1e63"></script>
     <script src="app/main/modals/editSelection/editSelection.controller.js?ef5e4b2cc9292229"></script>
   </body>
 </html>
